# jsonpp

./: LICENSE.txt  README.md  setup.cfg
jsonpp/: __init__.py  jsonpp.py
testfiles/: cyclonedx.json  spdx.json
