[metadata]
name = jsonpp
version = 0.1.1
author = Eliot Lear
author_email = lear@lear.ch
description = JSON Pretty Printer
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = jsonpp


[options.entry_points]
console_scripts =
   jsonpp = jsonpp.jsonpp:cli
